# dtl_json

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: main.yml
inc/: dtl_json.h
projects/eclipse/dtl_json_unit/: .cproject  .project  books.json
src/: dtl_json_reader.c  dtl_json_writer.c
test/: test_main.c  testsuite_dtl_json_reader.c  testsuite_dtl_json_writer.c  usage_test.c
